rest pages added

--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
     <title>Construction</title>
     <meta name="keywords" content="Infrastructure" />
     <meta name="description" content="engineering" />
-    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,300,500,900' rel='stylesheet' type='text/css' />
+    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,300' rel='stylesheet' type='text/css' />
     <link href="assets/css/style.css" type="text/css" rel="stylesheet" />
     <link href="assets/css/jquery.bxslider.css" type="text/css" rel="stylesheet" />
     <link href="assets/css/jquery.jscrollpane.css" type="text/css" rel="stylesheet" />
@@ -40,16 +40,6 @@
     <script>
         Modernizr.Detectizr.detect({ detectScreen: false });
     </script>
-    <div class="social-fixed">
-        <ul>
-            <li>
-                <a href="#"></a>
-            </li>
-            <li>
-                <a href="#"></a>
-            </li>
-        </ul>
-    </div>
     <div class="wrapper">
         <div class="row collapse">
             <div class="rowContent">
@@ -78,6 +68,7 @@
         </div>
 
         <div class="sticky" id="sticky">
+
             <div class="row mainNavigation collapse">
                 <div class="large-16 large-centered column clearfix">
                     <div class="mobileMenuControls clearfix">
@@ -121,7 +112,7 @@
                                 </div>
                             </div>
 
-                        </li>
+                        </li> 
                         <li>
                             <h2><a href="/services.html" class="">Our Services</a></h2>
 
@@ -158,171 +149,70 @@
                     </ul>
                 </div>
             </div>
+
         </div>
         <div class="subpage-container">
-            <div class="left-bar-overlay">
-                <div class="lb-close">
-                    <span style="background: url('/assets/images/lb_close.png') no-repeat;"></span>
-                </div>
-            </div>
-            <div class="left-bar">
-                <div class="left-bar-container">
-                    <div class="serve-blocks">
-                        <a href="" class="serve-block">
-                            <div class="serve-block-img">
-                                <img src="/assets/images/rewamp_images/business-img.jpg">
-                            </div>
-                            <div class="serve-block-content">
-                                <p>The variable density tunnel boring machine of the Grand Paris Express</p>
-                            </div>
-                        </a>
-                        <a href="" class="serve-block">
-                            <div class="serve-block-img">
-                                <img src="/assets/images/rewamp_images/business-img.jpg">
-                            </div>
-                            <div class="serve-block-content">
-                                <p>The variable density tunnel boring machine of the Grand Paris Express</p>
-                            </div>
-                        </a>
-                        <a href="" class="serve-block">
-                            <div class="serve-block-img">
-                                <img src="/assets/images/rewamp_images/business-img.jpg">
-                            </div>
-                            <div class="serve-block-content">
-                                <p>The variable density tunnel boring machine of the Grand Paris Express</p>
-                            </div>
-                        </a>
-                        <a href="" class="serve-block">
-                            <div class="serve-block-img">
-                                <img src="/assets/images/rewamp_images/business-img.jpg">
-                            </div>
-                            <div class="serve-block-content">
-                                <p>The variable density tunnel boring machine of the Grand Paris Express</p>
-                            </div>
-                        </a>
-                        <a href="" class="serve-block">
-                            <div class="serve-block-img">
-                                <img src="/assets/images/rewamp_images/business-img.jpg">
-                            </div>
-                            <div class="serve-block-content">
-                                <p>The variable density tunnel boring machine of the Grand Paris Express</p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="left-bar-link"><span>Magazine</span></div>
-            </div>
-            <!-- <div class="right-bar-container">
-                <div class="right-close" style="background: url('/assets/images/lb_close.png') no-repeat;"></div>
-                <div class="serve-blocks">
-                    <a href="" class="serve-block">
-                        <div class="serve-block-img">
-                            <img src="/assets/images/rewamp_images/business-img.jpg">
-                        </div>
-                        <div class="serve-block-content">
-                            <p>The variable density tunnel boring machine of the Grand Paris Express</p>
-                        </div>
-                    </a>
-                    <a href="" class="serve-block">
-                        <div class="serve-block-img">
-                            <img src="/assets/images/rewamp_images/business-img.jpg">
-                        </div>
-                        <div class="serve-block-content">
-                            <p>The variable density tunnel boring machine of the Grand Paris Express</p>
-                        </div>
-                    </a>
-                    <a href="" class="serve-block">
-                        <div class="serve-block-img">
-                            <img src="/assets/images/rewamp_images/business-img.jpg">
-                        </div>
-                        <div class="serve-block-content">
-                            <p>The variable density tunnel boring machine of the Grand Paris Express</p>
-                        </div>
-                    </a>
-                    <a href="" class="serve-block">
-                        <div class="serve-block-img">
-                            <img src="/assets/images/rewamp_images/business-img.jpg">
-                        </div>
-                        <div class="serve-block-content">
-                            <p>The variable density tunnel boring machine of the Grand Paris Express</p>
-                        </div>
-                    </a>
-                    <a href="" class="serve-block">
-                        <div class="serve-block-img">
-                            <img src="/assets/images/rewamp_images/business-img.jpg">
-                        </div>
-                        <div class="serve-block-content">
-                            <p>The variable density tunnel boring machine of the Grand Paris Express</p>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="right-bar">
-                <div class="right-bar-link"><span>Other Websites</span></div>
-            </div> -->
             <div class="head-container">
                 <div class="t-w_bg-overlay"></div>
                 <div class="rowContent">
                     <div class="head-content">
-                        <h1>Our Services</h1>
-                        <p>knit into the areas of strategy, creative design and technology, we offer services that are integrated in order to take your business scale knit into the areas of strategy, creative design and technology, we offer services that are integrated in order to take your business.</p>
+                        <h1>Highlight projects</h1>
+                        <p>Do you want information on particularly trend-setting HOCHTIEF projects? Here you will find a selection of projects in different segments from all over the world. Be inspired and find out what HOCHTIEF is capable of.</p>
                     </div>
                 </div>
             </div>
-            <div class="p-content">
-                <div class="rowContent">
-                    <div class="service-container">
-                        <p class="p-content-para">Pre-construction services are used in planning a construction project before the actual construction begins. These services are often referred to as preconstruction or precon. It is a modern practice, considered to be part of construction project management, which is the overall planning, coordination, and control of a project from inception to completion aimed at meeting a client’s requirements in order to produce a functionally and financially viable project<br/><br>
-                        Our construction management success is largely a result of what we contribute and accomplish during preconstruction. The ECRB Preconstruction model is a comprehensive and collaborative “building-team” process, initiated at project conception, and executed throughout the design phase.<br/><br/>
-                        The program enables our team to provide cost and schedule certainty, value driven building solutions, a high level of facility/ building performance, and ultimately, enhanced customer satisfaction.</p>
+            <div class="all-project">
+                <div class="single-project">
+                    <div class="sp-img">
+                        <img src="/assets/images/people-banner.jpg"/>
                     </div>
-                    <section id="energySection">
-                        <div class="loader"></div>
-                        <div class="energy-container customjumpLink"
-                            style="background-color: #fff;">
-                            <a name="" id="arrowAnchor"></a>
-                            <div class="container">
-                                <div class="energy-wrapper">
-                                    <div class="energy-slider">
-                                        <div class="energy-item">
-                                            <div class="energy-img" style="margin: auto;">
-                                                <img src="/assets/images/sld-img-3.jpg"
-                                                    alt="UNLOCKING ENERGY">
-                                            </div>
-                                        </div>
-                                        <div class="energy-item">
-                                            <div class="energy-img" style="margin: auto;">
-                                                <img src="/assets/images/sld-img-2.jpg"
-                                                    alt="UNLOCKING ENERGY">
-                                            </div>
-                                        </div>
-                                        <div class="energy-item">
-                                            <div class="energy-img" style="margin: auto;">
-                                                <img src="/assets/images/sld-img-1.jpg"
-                                                    alt="UNLOCKING ENERGY">
-                                            </div>
-                                        </div>
-        
-                                    </div>
-                                    <div class="outside">
-                                        <p>
-                                            <span id="slider-prev"></span>
-                                            <span id="slide-counter-2"></span>
-                                            <span id="slider-next"></span>
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-        
-                    </section>
-                    <p class="p-content-para">Pre-construction services are used in planning a construction project before the actual construction begins. These services are often referred to as preconstruction or precon. It is a modern practice, considered to be part of construction project management, which is the overall planning, coordination, and control of a project from inception to completion aimed at meeting a client’s requirements in order to produce a functionally and financially viable project<br/><br>
-                        Our construction management success is largely a result of what we contribute and accomplish during preconstruction. The ECRB Preconstruction model is a comprehensive and collaborative “building-team” process, initiated at project conception, and executed throughout the design phase.<br/><br/>
-                        The program enables our team to provide cost and schedule certainty, value driven building solutions, a high level of facility/ building performance, and ultimately, enhanced customer satisfaction.</p>
-                        <br/><br><br/><br>
+                    <div class="sp-content">
+                        <p class="sp-title">Elbe Philharmonic Hall</p>
+                        <p class="sp-subtitle">Hamburg, Germany</p>
+                        <a href="#" class="iconlink xs bold svg-icon icon-internal before ol-off"> <svg class="svg-icon-internal" aria-hidden="true" viewBox="0 0 16 16"><polygon points="11.503268 4 10.5620915 4.9627907 13.427451 7.83023256 0 7.83023256 0 9.16976744 13.427451 9.16976744 10.5620915 12.0372093 11.503268 13 16 8.5"></polygon></svg>Look at project</a>
+                    </div>
+                </div>
+                <div class="single-project">
+                    <div class="sp-img">
+                        <img src="/assets/images/people-banner.jpg"/>
+                    </div>
+                    <div class="sp-content">
+                        <p class="sp-title">Elbe Philharmonic Hall</p>
+                        <p class="sp-subtitle">Hamburg, Germany</p>
+                        <a href="#" class="iconlink xs bold svg-icon icon-internal before ol-off"> <svg class="svg-icon-internal" aria-hidden="true" viewBox="0 0 16 16"><polygon points="11.503268 4 10.5620915 4.9627907 13.427451 7.83023256 0 7.83023256 0 9.16976744 13.427451 9.16976744 10.5620915 12.0372093 11.503268 13 16 8.5"></polygon></svg>Look at project</a>
+                    </div>
+                </div>
+                <div class="single-project">
+                    <div class="sp-img">
+                        <img src="/assets/images/people-banner.jpg"/>
+                    </div>
+                    <div class="sp-content">
+                        <p class="sp-title">Elbe Philharmonic Hall</p>
+                        <p class="sp-subtitle">Hamburg, Germany</p>
+                        <a href="#" class="iconlink xs bold svg-icon icon-internal before ol-off"> <svg class="svg-icon-internal" aria-hidden="true" viewBox="0 0 16 16"><polygon points="11.503268 4 10.5620915 4.9627907 13.427451 7.83023256 0 7.83023256 0 9.16976744 13.427451 9.16976744 10.5620915 12.0372093 11.503268 13 16 8.5"></polygon></svg>Look at project</a>
+                    </div>
+                </div>
+                <div class="single-project">
+                    <div class="sp-img">
+                        <img src="/assets/images/people-banner.jpg"/>
+                    </div>
+                    <div class="sp-content">
+                        <p class="sp-title">Elbe Philharmonic Hall</p>
+                        <p class="sp-subtitle">Hamburg, Germany</p>
+                        <a href="#" class="iconlink xs bold svg-icon icon-internal before ol-off"> <svg class="svg-icon-internal" aria-hidden="true" viewBox="0 0 16 16"><polygon points="11.503268 4 10.5620915 4.9627907 13.427451 7.83023256 0 7.83023256 0 9.16976744 13.427451 9.16976744 10.5620915 12.0372093 11.503268 13 16 8.5"></polygon></svg>Look at project</a>
+                    </div>
+                </div>
+                <div class="single-project">
+                    <div class="sp-img">
+                        <img src="/assets/images/people-banner.jpg"/>
+                    </div>
+                    <div class="sp-content">
+                        <p class="sp-title">Elbe Philharmonic Hall</p>
+                        <p class="sp-subtitle">Hamburg, Germany</p>
+                        <a href="#" class="iconlink xs bold svg-icon icon-internal before ol-off"> <svg class="svg-icon-internal" aria-hidden="true" viewBox="0 0 16 16"><polygon points="11.503268 4 10.5620915 4.9627907 13.427451 7.83023256 0 7.83023256 0 9.16976744 13.427451 9.16976744 10.5620915 12.0372093 11.503268 13 16 8.5"></polygon></svg>Look at project</a>
+                    </div>
                 </div>
             </div>
-
         </div>
 
         <!-- Footer Starts-->
@@ -588,38 +478,7 @@
                 $(".dropdown-content").hide();
             }
         });
-        $(document).ready(function (e) {
-            //alert('ready');
-            $(".left-bar-link").click(function (e) {
-                e.stopPropagation();
-                $(".left-bar-overlay").toggleClass("active");
-                $(".left-bar-container").toggleClass("active");
-                $(".left-bar-link").toggleClass("active");
-                $("body").toggleClass("active");
-            });
-            $(".lb-close").click(function (e) {
-                e.stopPropagation();
-                $(".left-bar-overlay").removeClass("active");
-                $(".left-bar-container").removeClass("active");
-                $("body").removeClass("active");
-                $(".left-bar-link").removeClass("active");
-            });
-            $(".right-bar-link").click(function (e) {
-                e.stopPropagation();
-                $(".right-close").toggleClass("active");
-                $(".right-bar-container").toggleClass("active");
-                $(".right-bar-link").toggleClass("active");
-                $("body").toggleClass("active");
-            });
-            $(".lb-close").click(function (e) {
-                e.stopPropagation();
-                $(".right-close").removeClass("active");
-                $(".right-bar-container").removeClass("active");
-                $("body").removeClass("active");
-                $(".right-bar-link").removeClass("active");
-            });
 
-        });
 
         $(document).on('touchstart', function (e) {
             detectTap = true;
@@ -821,5 +680,3 @@
 
 
 </html>
-https://www.hochtief.com/activities/highlight-projects
-https://www.ecrbuildtech.com/projects/2480/
