--- a/index.html
+++ b/index.html
@@ -121,9 +121,8 @@
                             <h2><a href="/why-choose-us.html" class="">Why Choose Us</a></h2>
                         </li>
                         <li>
-                            <h2><a href="corporate/products-and-services/index.html" class="">Products And Services</a>
+                            <h2><a href="/projects.html" class="">Our Projects</a>
                             </h2>
-
                         </li>
                         <li>
                             <h2><a href="corporate/careers/index.html" class="">Careers</a></h2>
