--- a/why-choose-us.html
+++ b/why-choose-us.html
@@ -130,15 +130,12 @@
                             <h2><a href="/why-choose-us.html" class="">Why Choose Us</a></h2>
                         </li>
                         <li>
-                            <h2><a href="corporate/products-and-services/index.html" class="">Products And Services</a>
+                            <h2><a href="/projects.html" class="">Our Projects</a>
                             </h2>
-
                         </li>
                         <li>
                             <h2><a href="corporate/careers/index.html" class="">Careers</a></h2>
                         </li>
-
-
                         <li class="globalLinks hidden-for-large-up">
                             <h2><a href="corporate/covid-19/index.html">COVID-19</a></h2>
                         </li>
